COMP/minic/minic.output
State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID PARENL PARENR BRACKETL decls statement_list BRACKETR

    3 decls: decls RVAR type var_list SEMICOLON
    4      | decls RCONST type const_list SEMICOLON
    5      | ε

    6 type: RINT

    7 var_list: ID
    8         | var_list COMMA ID

    9 const_list: ID OEQUALS expr
   10           | const_list COMMA ID OEQUALS expr

   11 statement_list: statement_list statement
   12               | ε

   13 statement: ID OEQUALS expr SEMICOLON
   14          | BRACKETL statement_list BRACKETR
   15          | RIF PARENL expr PARENR statement RELSE statement
   16          | RIF PARENL expr PARENR statement
   17          | RWHILE PARENL expr PARENR statement
   18          | RPRINT PARENL print_list PARENR SEMICOLON
   19          | RREAD PARENL read_list PARENR SEMICOLON

   20 print_list: print_item
   21           | print_list COMMA print_item

   22 print_item: expr
   23           | LSTR

   24 read_list: ID
   25          | read_list COMMA ID

   26 expr: expr OPLUS expr
   27     | expr OMINUS expr
   28     | expr OASTERISK expr
   29     | expr OSLASH expr
   30     | PARENL expr QUESTIONMARK expr COLON expr PARENR
   31     | OMINUS expr
   32     | PARENL expr PARENR
   33     | ID
   34     | LINT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RVAR (258) 3
    RCONST (259) 4
    RINT (260) 6
    RIF (261) 15 16
    RELSE (262) 15
    RWHILE (263) 17
    RPRINT (264) 18
    RREAD (265) 19
    SEMICOLON (266) 3 4 13 18 19
    COMMA (267) 8 10 21 25
    OPLUS (268) 26
    OMINUS (269) 27 31
    OASTERISK (270) 28
    OSLASH (271) 29
    OEQUALS (272) 9 10 13
    PARENL (273) 2 15 16 17 18 19 30 32
    PARENR (274) 2 15 16 17 18 19 30 32
    BRACKETL (275) 2 14
    BRACKETR (276) 2 14
    QUESTIONMARK (277) 30
    COLON (278) 30
    ID <lex> (279) 2 7 8 9 10 13 24 25 33
    LSTR <lex> (280) 23
    LINT <lex> (281) 34


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    program (28)
        on left: 2
        on right: 0
    $@1 (29)
        on left: 1
        on right: 2
    decls <code> (30)
        on left: 3 4 5
        on right: 2 3 4
    type (31)
        on left: 6
        on right: 3 4
    var_list (32)
        on left: 7 8
        on right: 3 8
    const_list <code> (33)
        on left: 9 10
        on right: 4 10
    statement_list <code> (34)
        on left: 11 12
        on right: 2 11 14
    statement <code> (35)
        on left: 13 14 15 16 17 18 19
        on right: 11 15 16 17
    print_list <code> (36)
        on left: 20 21
        on right: 18 21
    print_item <code> (37)
        on left: 22 23
        on right: 20 21
    read_list <code> (38)
        on left: 24 25
        on right: 19 25
    expr <code> (39)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 9 10 13 15 16 17 22 26 27 28 29 30 31 32


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • ID PARENL PARENR BRACKETL decls statement_list BRACKETR

    ID  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 ID • PARENL PARENR BRACKETL decls statement_list BRACKETR

    PARENL  shift, and go to state 5


State 5

    2 program: $@1 ID PARENL • PARENR BRACKETL decls statement_list BRACKETR

    PARENR  shift, and go to state 6


State 6

    2 program: $@1 ID PARENL PARENR • BRACKETL decls statement_list BRACKETR

    BRACKETL  shift, and go to state 7


State 7

    2 program: $@1 ID PARENL PARENR BRACKETL • decls statement_list BRACKETR

    $default  reduce using rule 5 (decls)

    decls  go to state 8


State 8

    2 program: $@1 ID PARENL PARENR BRACKETL decls • statement_list BRACKETR
    3 decls: decls • RVAR type var_list SEMICOLON
    4      | decls • RCONST type const_list SEMICOLON

    RVAR    shift, and go to state 9
    RCONST  shift, and go to state 10

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 11


State 9

    3 decls: decls RVAR • type var_list SEMICOLON

    RINT  shift, and go to state 12

    type  go to state 13


State 10

    4 decls: decls RCONST • type const_list SEMICOLON

    RINT  shift, and go to state 12

    type  go to state 14


State 11

    2 program: $@1 ID PARENL PARENR BRACKETL decls statement_list • BRACKETR
   11 statement_list: statement_list • statement

    RIF       shift, and go to state 15
    RWHILE    shift, and go to state 16
    RPRINT    shift, and go to state 17
    RREAD     shift, and go to state 18
    BRACKETL  shift, and go to state 19
    BRACKETR  shift, and go to state 20
    ID        shift, and go to state 21

    statement  go to state 22


State 12

    6 type: RINT •

    $default  reduce using rule 6 (type)


State 13

    3 decls: decls RVAR type • var_list SEMICOLON

    ID  shift, and go to state 23

    var_list  go to state 24


State 14

    4 decls: decls RCONST type • const_list SEMICOLON

    ID  shift, and go to state 25

    const_list  go to state 26


State 15

   15 statement: RIF • PARENL expr PARENR statement RELSE statement
   16          | RIF • PARENL expr PARENR statement

    PARENL  shift, and go to state 27


State 16

   17 statement: RWHILE • PARENL expr PARENR statement

    PARENL  shift, and go to state 28


State 17

   18 statement: RPRINT • PARENL print_list PARENR SEMICOLON

    PARENL  shift, and go to state 29


State 18

   19 statement: RREAD • PARENL read_list PARENR SEMICOLON

    PARENL  shift, and go to state 30


State 19

   14 statement: BRACKETL • statement_list BRACKETR

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 31


State 20

    2 program: $@1 ID PARENL PARENR BRACKETL decls statement_list BRACKETR •

    $default  reduce using rule 2 (program)


State 21

   13 statement: ID • OEQUALS expr SEMICOLON

    OEQUALS  shift, and go to state 32


State 22

   11 statement_list: statement_list statement •

    $default  reduce using rule 11 (statement_list)


State 23

    7 var_list: ID •

    $default  reduce using rule 7 (var_list)


State 24

    3 decls: decls RVAR type var_list • SEMICOLON
    8 var_list: var_list • COMMA ID

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 34


State 25

    9 const_list: ID • OEQUALS expr

    OEQUALS  shift, and go to state 35


State 26

    4 decls: decls RCONST type const_list • SEMICOLON
   10 const_list: const_list • COMMA ID OEQUALS expr

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 37


State 27

   15 statement: RIF PARENL • expr PARENR statement RELSE statement
   16          | RIF PARENL • expr PARENR statement

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 42


State 28

   17 statement: RWHILE PARENL • expr PARENR statement

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 43


State 29

   18 statement: RPRINT PARENL • print_list PARENR SEMICOLON

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LSTR    shift, and go to state 44
    LINT    shift, and go to state 41

    print_list  go to state 45
    print_item  go to state 46
    expr        go to state 47


State 30

   19 statement: RREAD PARENL • read_list PARENR SEMICOLON

    ID  shift, and go to state 48

    read_list  go to state 49


State 31

   11 statement_list: statement_list • statement
   14 statement: BRACKETL statement_list • BRACKETR

    RIF       shift, and go to state 15
    RWHILE    shift, and go to state 16
    RPRINT    shift, and go to state 17
    RREAD     shift, and go to state 18
    BRACKETL  shift, and go to state 19
    BRACKETR  shift, and go to state 50
    ID        shift, and go to state 21

    statement  go to state 22


State 32

   13 statement: ID OEQUALS • expr SEMICOLON

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 51


State 33

    3 decls: decls RVAR type var_list SEMICOLON •

    $default  reduce using rule 3 (decls)


State 34

    8 var_list: var_list COMMA • ID

    ID  shift, and go to state 52


State 35

    9 const_list: ID OEQUALS • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 53


State 36

    4 decls: decls RCONST type const_list SEMICOLON •

    $default  reduce using rule 4 (decls)


State 37

   10 const_list: const_list COMMA • ID OEQUALS expr

    ID  shift, and go to state 54


State 38

   31 expr: OMINUS • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 55


State 39

   30 expr: PARENL • expr QUESTIONMARK expr COLON expr PARENR
   32     | PARENL • expr PARENR

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 56


State 40

   33 expr: ID •

    $default  reduce using rule 33 (expr)


State 41

   34 expr: LINT •

    $default  reduce using rule 34 (expr)


State 42

   15 statement: RIF PARENL expr • PARENR statement RELSE statement
   16          | RIF PARENL expr • PARENR statement
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60
    PARENR     shift, and go to state 61


State 43

   17 statement: RWHILE PARENL expr • PARENR statement
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60
    PARENR     shift, and go to state 62


State 44

   23 print_item: LSTR •

    $default  reduce using rule 23 (print_item)


State 45

   18 statement: RPRINT PARENL print_list • PARENR SEMICOLON
   21 print_list: print_list • COMMA print_item

    COMMA   shift, and go to state 63
    PARENR  shift, and go to state 64


State 46

   20 print_list: print_item •

    $default  reduce using rule 20 (print_list)


State 47

   22 print_item: expr •
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 22 (print_item)


State 48

   24 read_list: ID •

    $default  reduce using rule 24 (read_list)


State 49

   19 statement: RREAD PARENL read_list • PARENR SEMICOLON
   25 read_list: read_list • COMMA ID

    COMMA   shift, and go to state 65
    PARENR  shift, and go to state 66


State 50

   14 statement: BRACKETL statement_list BRACKETR •

    $default  reduce using rule 14 (statement)


State 51

   13 statement: ID OEQUALS expr • SEMICOLON
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    SEMICOLON  shift, and go to state 67
    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60


State 52

    8 var_list: var_list COMMA ID •

    $default  reduce using rule 8 (var_list)


State 53

    9 const_list: ID OEQUALS expr •
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 9 (const_list)


State 54

   10 const_list: const_list COMMA ID • OEQUALS expr

    OEQUALS  shift, and go to state 68


State 55

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr
   31     | OMINUS expr •

    OPLUS      shift, and go to state 57
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 31 (expr)


State 56

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr
   30     | PARENL expr • QUESTIONMARK expr COLON expr PARENR
   32     | PARENL expr • PARENR

    OPLUS         shift, and go to state 57
    OMINUS        shift, and go to state 58
    OASTERISK     shift, and go to state 59
    OSLASH        shift, and go to state 60
    PARENR        shift, and go to state 69
    QUESTIONMARK  shift, and go to state 70


State 57

   26 expr: expr OPLUS • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 71


State 58

   27 expr: expr OMINUS • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 72


State 59

   28 expr: expr OASTERISK • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 73


State 60

   29 expr: expr OSLASH • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 74


State 61

   15 statement: RIF PARENL expr PARENR • statement RELSE statement
   16          | RIF PARENL expr PARENR • statement

    RIF       shift, and go to state 15
    RWHILE    shift, and go to state 16
    RPRINT    shift, and go to state 17
    RREAD     shift, and go to state 18
    BRACKETL  shift, and go to state 19
    ID        shift, and go to state 21

    statement  go to state 75


State 62

   17 statement: RWHILE PARENL expr PARENR • statement

    RIF       shift, and go to state 15
    RWHILE    shift, and go to state 16
    RPRINT    shift, and go to state 17
    RREAD     shift, and go to state 18
    BRACKETL  shift, and go to state 19
    ID        shift, and go to state 21

    statement  go to state 76


State 63

   21 print_list: print_list COMMA • print_item

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LSTR    shift, and go to state 44
    LINT    shift, and go to state 41

    print_item  go to state 77
    expr        go to state 47


State 64

   18 statement: RPRINT PARENL print_list PARENR • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 65

   25 read_list: read_list COMMA • ID

    ID  shift, and go to state 79


State 66

   19 statement: RREAD PARENL read_list PARENR • SEMICOLON

    SEMICOLON  shift, and go to state 80


State 67

   13 statement: ID OEQUALS expr SEMICOLON •

    $default  reduce using rule 13 (statement)


State 68

   10 const_list: const_list COMMA ID OEQUALS • expr

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 81


State 69

   32 expr: PARENL expr PARENR •

    $default  reduce using rule 32 (expr)


State 70

   30 expr: PARENL expr QUESTIONMARK • expr COLON expr PARENR

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 82


State 71

   26 expr: expr • OPLUS expr
   26     | expr OPLUS expr •
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 26 (expr)


State 72

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   27     | expr OMINUS expr •
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 27 (expr)


State 73

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   28     | expr OASTERISK expr •
   29     | expr • OSLASH expr

    $default  reduce using rule 28 (expr)


State 74

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr
   29     | expr OSLASH expr •

    OASTERISK  shift, and go to state 59

    $default  reduce using rule 29 (expr)


State 75

   15 statement: RIF PARENL expr PARENR statement • RELSE statement
   16          | RIF PARENL expr PARENR statement •

    RELSE  shift, and go to state 83

    RELSE     [reduce using rule 16 (statement)]
    $default  reduce using rule 16 (statement)


State 76

   17 statement: RWHILE PARENL expr PARENR statement •

    $default  reduce using rule 17 (statement)


State 77

   21 print_list: print_list COMMA print_item •

    $default  reduce using rule 21 (print_list)


State 78

   18 statement: RPRINT PARENL print_list PARENR SEMICOLON •

    $default  reduce using rule 18 (statement)


State 79

   25 read_list: read_list COMMA ID •

    $default  reduce using rule 25 (read_list)


State 80

   19 statement: RREAD PARENL read_list PARENR SEMICOLON •

    $default  reduce using rule 19 (statement)


State 81

   10 const_list: const_list COMMA ID OEQUALS expr •
   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60

    $default  reduce using rule 10 (const_list)


State 82

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr
   30     | PARENL expr QUESTIONMARK expr • COLON expr PARENR

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60
    COLON      shift, and go to state 84


State 83

   15 statement: RIF PARENL expr PARENR statement RELSE • statement

    RIF       shift, and go to state 15
    RWHILE    shift, and go to state 16
    RPRINT    shift, and go to state 17
    RREAD     shift, and go to state 18
    BRACKETL  shift, and go to state 19
    ID        shift, and go to state 21

    statement  go to state 85


State 84

   30 expr: PARENL expr QUESTIONMARK expr COLON • expr PARENR

    OMINUS  shift, and go to state 38
    PARENL  shift, and go to state 39
    ID      shift, and go to state 40
    LINT    shift, and go to state 41

    expr  go to state 86


State 85

   15 statement: RIF PARENL expr PARENR statement RELSE statement •

    $default  reduce using rule 15 (statement)


State 86

   26 expr: expr • OPLUS expr
   27     | expr • OMINUS expr
   28     | expr • OASTERISK expr
   29     | expr • OSLASH expr
   30     | PARENL expr QUESTIONMARK expr COLON expr • PARENR

    OPLUS      shift, and go to state 57
    OMINUS     shift, and go to state 58
    OASTERISK  shift, and go to state 59
    OSLASH     shift, and go to state 60
    PARENR     shift, and go to state 87


State 87

   30 expr: PARENL expr QUESTIONMARK expr COLON expr PARENR •

    $default  reduce using rule 30 (expr)
